feat: 添加初始化功能
